K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  selector:
    matchLabels:
      app: commandservice
  replicas: 1
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  commandservice
        image:  binarythistle/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
   name:  command-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
  - name:  commandservice
    port:  80
    protocol: TCP
    targetPort: 80
