K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  selector:
    matchLabels:
      app: platformservices
  replicas: 1
  template:
    metadata:
      labels:
        app: platformservices
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  platformservices
        image:  binarythistle/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
   name:  platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservices
  ports:
  - name:  platformservices
    port:  80
    protocol: TCP
    targetPort: 80
  - name: plafromgrpc
    protocol: TCP
    port: 666
    targetPort: 666
